# datta

./: Cargo.toml  LICENSE  README.md
.github/workflows/: datta-compact.yml  datta-macos.yml  datta-ubuntu.yml  datta-windows.yml  datta.yml  deploy.yml  long-checks.yml
scripts/: generate_tests.py
src/: lib.rs  percent_encoding.rs  templatevar.rs
tests/: extended_tests.rs  spec_examples.rs  spec_examples_by_section.rs  test_uritemplate.rs
