[package]
name = "datta"
version = "0.1.0"
description = """Rust implementation of RFC6570 - URI Template that can process\
 URI Templates up and to including ones designated Level 4."""
repository = "https://github.com/sifis-home/datta"
readme = "README.md"
keywords = [
  "uritemplates",
  "URL",
  "URI",
  "template",
  "RFC6570"
]
license = "BSD-3-Clause"

[dependencies]
regex = "0.1.69"
